--- a/about.html
+++ b/about.html
@@ -28,22 +28,24 @@
             document.documentElement.classList.remove("is_dark");
         } 
     </script>
-     <!-- Meta Pixel Code -->
-<script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1265254278096647');
-    fbq('track', 'PageView');
+    <!-- Meta Pixel Code -->
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '1265254278096647');
+        fbq('track', 'PageView');
     </script>
     <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=1265254278096647&ev=PageView&noscript=1"
-    /></noscript>
+            src="https://www.facebook.com/tr?id=1265254278096647&ev=PageView&noscript=1" /></noscript>
     <!-- End Meta Pixel Code -->
 
 </head>
@@ -274,8 +276,8 @@
                             <ul class="offcanvas__sub_menu">
                                 <li class="offcanvas__sub_menu_li"><a href="blog"
                                         class="offcanvas__sub_menu_item">Blog</a></li>
-                                        <li class="offcanvas__sub_menu_li"><a href="team"
-                                            class="offcanvas__sub_menu_item">Team</a></li>
+                                <li class="offcanvas__sub_menu_li"><a href="team"
+                                        class="offcanvas__sub_menu_item">Team</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="project"
                                         class="offcanvas__sub_menu_item">Projects</a></li>
                                 <!-- <li class="offcanvas__sub_menu_li"><a href="project-details.html"
@@ -945,19 +947,19 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="/">Home</a>
+                                            <a href="/" target="_blank">Home</a>
                                         </li>
                                         <li>
-                                            <a href="about">About us</a>
+                                            <a href="about" target="_blank">About us</a>
                                         </li>
                                         <li>
-                                            <a href="blog">Blog update</a>
+                                            <a href="blog" target="_blank">Blog update</a>
                                         </li>
                                         <li>
-                                            <a href="services">Our services</a>
+                                            <a href="services" target="_blank">Our services</a>
                                         </li>
                                         <li>
-                                            <a href="team">Team</a>
+                                            <a href="team" target="_blank">Team</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -971,19 +973,19 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="project">Portfolio </a>
+                                            <a href="project" target="_blank">Portfolio </a>
                                         </li>
                                         <li>
-                                            <a href="seo-services">Seo Services</a>
+                                            <a href="seo-services" target="_blank">Seo Services</a>
                                         </li>
                                         <li>
-                                            <a href="faq">FAQ</a>
+                                            <a href="faq" target="_blank">FAQ</a>
                                         </li>
                                         <li>
-                                            <a href="contact">Customer support</a>
+                                            <a href="contact" target="_blank">Customer support</a>
                                         </li>
                                         <li>
-                                            <a href="contact">Contact us</a>
+                                            <a href="contact" target="_blank">Contact us</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -1026,11 +1028,11 @@
                                         <a href="javascript:avoid()">Terms & Conditions</a>
                                     </li>
                                 </ul>
-    
+
                             </div>
                         </div>
                     </div>
-    
+
                 </div>
             </div>
         </div>
