--- a/blog.html
+++ b/blog.html
@@ -740,7 +740,8 @@
                                         <p class="bg__white"><span class="text__gradient">13 January, 2025</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="Professional-Web-Development-Company" target="_blank">Expert Web Development Company in USA</a></h6>
+                                        <h6><a href="Professional-Web-Development-Company" target="_blank">Expert Web
+                                                Development Company in USA</a></h6>
                                     </div>
                                     <div class="blog__4__text">
                                         <p>Your business needs a unique USA web development company for success.</p>
@@ -876,19 +877,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="/">Home</a>
+                                                <a href="/" target="_blank">Home</a>
                                             </li>
                                             <li>
-                                                <a href="about">About us</a>
+                                                <a href="about" target="_blank">About us</a>
                                             </li>
                                             <li>
-                                                <a href="blog">Blog update</a>
+                                                <a href="blog" target="_blank">Blog update</a>
                                             </li>
                                             <li>
-                                                <a href="services">Our services</a>
+                                                <a href="services" target="_blank">Our services</a>
                                             </li>
                                             <li>
-                                                <a href="team">Team</a>
+                                                <a href="team" target="_blank">Team</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -903,19 +904,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="project">Portfolio </a>
+                                                <a href="project" target="_blank">Portfolio </a>
                                             </li>
                                             <li>
-                                                <a href="seo-services">Seo Services</a>
+                                                <a href="seo-services" target="_blank">Seo Services</a>
                                             </li>
                                             <li>
-                                                <a href="faq">FAQ</a>
+                                                <a href="faq" target="_blank">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="contact">Customer support</a>
+                                                <a href="contact" target="_blank">Customer support</a>
                                             </li>
                                             <li>
-                                                <a href="contact">Contact us</a>
+                                                <a href="contact" target="_blank">Contact us</a>
                                             </li>
                                         </ul>
                                     </div>
