--- a/team.html
+++ b/team.html
@@ -650,7 +650,7 @@
 
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="team__details__button text-center">
-                            <a class="default__button btn__black" href="contact">JOIN WITH US</a>
+                            <a class="default__button btn__black" href="contact" target="_blank">JOIN WITH US</a>
                         </div>
                     </div>
                 </div>
@@ -869,7 +869,7 @@
 
                             </div>
                             <div class="footer__bottom">
-                                <a class="default__button" href="contact">CONTACT US</a>
+                                <a class="default__button" href="contact" target="_blank">CONTACT US</a>
                             </div>
                         </div>
                     </div>
