--- a/what-is-software-development-a-comprehensive-guide.html
+++ b/what-is-software-development-a-comprehensive-guide.html
@@ -867,19 +867,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="/">Home</a>
+                                                <a href="/" target="_blank">Home</a>
                                             </li>
                                             <li>
-                                                <a href="about">About us</a>
+                                                <a href="about" target="_blank">About us</a>
                                             </li>
                                             <li>
-                                                <a href="blog">Blog update</a>
+                                                <a href="blog" target="_blank">Blog update</a>
                                             </li>
                                             <li>
-                                                <a href="services">Our services</a>
+                                                <a href="services" target="_blank">Our services</a>
                                             </li>
                                             <li>
-                                                <a href="team">Team</a>
+                                                <a href="team" target="_blank">Team</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -894,19 +894,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="project">Portfolio </a>
+                                                <a href="project" target="_blank">Portfolio </a>
                                             </li>
                                             <li>
-                                                <a href="seo-services">Seo Services</a>
+                                                <a href="seo-services" target="_blank">Seo Services</a>
                                             </li>
                                             <li>
-                                                <a href="faq">FAQ</a>
+                                                <a href="faq" target="_blank">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="contact">Customer support</a>
+                                                <a href="contact" target="_blank">Customer support</a>
                                             </li>
                                             <li>
-                                                <a href="contact">Contact us</a>
+                                                <a href="contact" target="_blank">Contact us</a>
                                             </li>
                                         </ul>
                                     </div>
