blog images add

--- a/blog.html
+++ b/blog.html
@@ -733,7 +733,7 @@
                                 data-aos-duration="2500">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/digital-marketing-mobile.webp"
+                                        <img src="assets/img/blog/usa_company.png"
                                             alt="Digital_Marketing">
                                     </div>
                                     <div class="blog__4__time">
