--- a/Professional-Web-Development-Company.html
+++ b/Professional-Web-Development-Company.html
@@ -574,7 +574,7 @@
 
                             <div class="blog__details__img__wrapper" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="blog__details__img">
-                                    <img src="assets/img/blog/Title-desktop.webp" alt="img">
+                                    <img src="assets/img/blog/usa_desktop.png" alt="img">
                                 </div>
                                 <div class="blog__details__small__button">
                                     <span>08 May, 2024</span>
