--- a/our_services.html
+++ b/our_services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://i.postimg.cc/50MD4tqS/10456439.png" type="image/x-icon">
+    <link rel="icon" href="assets/img/logo/icon.svg" type="image/x-icon">
     <title>Our Services | Digital Minds On</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
