--- a/Professional-Web-Development-Company.html
+++ b/Professional-Web-Development-Company.html
@@ -598,7 +598,7 @@
                                 <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
                                     <h2>Why You Should Hire a Professional Web Development Company</h2>
                                 </div>
-                                <p>Deciding on a proper web development agency can have a massive effect on the result
+                                <p>Deciding on a proper <a href="web-development-services" target="_blank" style="color: #fe0094; font-weight: bold;">web development</a> agency can have a massive effect on the result
                                     of the business. An effective website is one where the customer gets the first
                                     impression of interacting with your organization hence the need to ensure the
                                     website passes this test.
@@ -649,7 +649,7 @@
                                     Minds On apart:</p>
                             </div>
                             <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Custom Web Developmen</h4>
+                                <h4>Custom Web Development</h4>
                             </div>
 
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
@@ -734,7 +734,7 @@
                         <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>Web development is a dynamic field as the development of AI, machine learning and
                                 progressive web apps are the future of this field. Being one of the progressive web
-                                development company in USA Digital Minds On always looks forward to implementing these
+                                development company in USA <a href="/" target="_blank" style="font-weight: bold; color: #fe0094;"> Digital Minds On</a> always looks forward to implementing these
                                 trends in our works.</p>
                             <p>Thanks to the growth of the digital market, various companies require convenient tools
                                 for interacting with consumers; for this purpose, they turn to the services of an
