--- a/what-is-mobile-application-development.html
+++ b/what-is-mobile-application-development.html
@@ -585,7 +585,7 @@
                                 <h2>What is Mobile App Development?</h2>
                             </div>
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p><b><a href="mobile-app-development-services">Mobile application development</a></b>
+                                <p><b><a href="mobile-app-development-services" style="color: var(--primaryColor); font-weight: bold;">Mobile application development</a></b>
                                     is the process of designing,
                                     developing and
                                     programming software applications that can operate on tablet or smartphone devices.
@@ -742,7 +742,7 @@
                         </div>
                         <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>Ensuring people like to spend their time using an app is crucial for its success so
-                                UX design deals with the development of a pleasant and manageable application
+                                <a href="ui-ux-design" target="_blank" style="font-weight: bold; color: var(--primaryColor);">UX design</a> deals with the development of a pleasant and manageable application
                                 interface for the specified audience.</p>
                         </div>
                         <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
