mobile app cards with responsive add

--- a/project.html
+++ b/project.html
@@ -608,8 +608,225 @@
                             </div>
                         </div>
                     </div>
-
-
+                </div>
+                <div class="row">
+                    <h3 style="text-align: center; margin-bottom: 30px;">Mobile App</h3>
+                      <!-- Alleo.ai -->
+                      <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12" data-aos="fade-up" data-aos-duration="2900">
+                        <div class="project__single single__transform">
+                            <div class="project__img">
+                                <img src="assets/img/full-page/mobile_app/alio.png"
+                                    alt="gym" loading="lazy">
+                            </div>
+                            <div class="project__content">
+                                <div class="project__heading">
+                                    <h3><a href="https://play.google.com/store/apps/details?id=com.alleo.mobile" target="_blank">Alleo.ai</a></h3>
+                                </div>
+                                <div class="project__icon">
+                                    <a class="direction__btn direction__btn--2" href="https://play.google.com/store/apps/details?id=com.alleo.mobile" target="_blank"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                            <path d="M10.9902 23.0107L22.8908 11.1101" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Pro Business Connections -->
+                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12" data-aos="fade-up" data-aos-duration="2900">
+                        <div class="project__single single__transform">
+                            <div class="project__img">
+                                <img src="assets/img/full-page/mobile_app/business.png"
+                                    alt="gym" loading="lazy">
+                            </div>
+                            <div class="project__content">
+                                <div class="project__heading">
+                                    <h3><a href="https://play.google.com/store/apps/details?id=com.techmicrosol.probusinessconnectionsofficial" target="_blank">Pro Business Connections</a></h3>
+                                </div>
+                                <div class="project__icon">
+                                    <a class="direction__btn direction__btn--2" href="https://play.google.com/store/apps/details?id=com.techmicrosol.probusinessconnectionsofficial" target="_blank"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                            <path d="M10.9902 23.0107L22.8908 11.1101" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- TiSegnalo -->
+                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12" data-aos="fade-up" data-aos-duration="2900">
+                        <div class="project__single single__transform">
+                            <div class="project__img">
+                                <img src="assets/img/full-page/mobile_app/car.png"
+                                    alt="gym" loading="lazy">
+                            </div>
+                            <div class="project__content">
+                                <div class="project__heading">
+                                    <h3><a href="https://play.google.com/store/apps/details?id=com.carmine.tisegnalo" target="_blank">TiSegnalo</a></h3>
+                                </div>
+                                <div class="project__icon">
+                                    <a class="direction__btn direction__btn--2" href="https://play.google.com/store/apps/details?id=com.carmine.tisegnalo" target="_blank"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                            <path d="M10.9902 23.0107L22.8908 11.1101" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Food Fair - Spring Valley -->
+                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12" data-aos="fade-up" data-aos-duration="2900">
+                        <div class="project__single single__transform">
+                            <div class="project__img">
+                                <img src="assets/img/full-page/mobile_app/food.png"
+                                    alt="gym" loading="lazy">
+                            </div>
+                            <div class="project__content">
+                                <div class="project__heading">
+                                    <h3><a href="https://play.google.com/store/apps/details?id=com.telonline.ffspringvalley" target="_blank">Food Fair - Spring Valley</a></h3>
+                                </div>
+                                <div class="project__icon">
+                                    <a class="direction__btn direction__btn--2" href="https://play.google.com/store/apps/details?id=com.telonline.ffspringvalley" target="_blank"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                            <path d="M10.9902 23.0107L22.8908 11.1101" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Clannit -->
+                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12" data-aos="fade-up" data-aos-duration="2900">
+                        <div class="project__single single__transform">
+                            <div class="project__img">
+                                <img src="assets/img/full-page/mobile_app/client.png"
+                                    alt="gym" loading="lazy">
+                            </div>
+                            <div class="project__content">
+                                <div class="project__heading">
+                                    <h3><a href="https://play.google.com/store/apps/details?id=com.serveconsulting.Clannit" target="_blank">Clannit</a></h3>
+                                </div>
+                                <div class="project__icon">
+                                    <a class="direction__btn direction__btn--2" href="https://play.google.com/store/apps/details?id=com.serveconsulting.Clannit" target="_blank"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                            <path d="M10.9902 23.0107L22.8908 11.1101" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- RingVoz -->
+                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12" data-aos="fade-up" data-aos-duration="2900">
+                        <div class="project__single single__transform">
+                            <div class="project__img">
+                                <img src="assets/img/full-page/mobile_app/ring.png"
+                                    alt="gym" loading="lazy">
+                            </div>
+                            <div class="project__content">
+                                <div class="project__heading">
+                                    <h3><a href="https://play.google.com/store/apps/details?id=com.ringvoz.ringvozmobileapp" target="_blank">RingVoz</a></h3>
+                                </div>
+                                <div class="project__icon">
+                                    <a class="direction__btn direction__btn--2" href="https://play.google.com/store/apps/details?id=com.ringvoz.ringvozmobileapp" target="_blank"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                            <path d="M10.9902 23.0107L22.8908 11.1101" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- BUILD-->
+                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12" data-aos="fade-up" data-aos-duration="2900">
+                        <div class="project__single single__transform">
+                            <div class="project__img">
+                                <img src="assets/img/full-page/mobile_app/build.png"
+                                    alt="gym" loading="lazy">
+                            </div>
+                            <div class="project__content">
+                                <div class="project__heading">
+                                    <h3><a href="https://apps.apple.com/us/app/build-convos-to-actions/id1571755886" target="_blank">BUILD</a></h3>
+                                </div>
+                                <div class="project__icon">
+                                    <a class="direction__btn direction__btn--2" href="https://apps.apple.com/us/app/build-convos-to-actions/id1571755886" target="_blank"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                            <path d="M10.9902 23.0107L22.8908 11.1101" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- AWRS -->
+                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 col-12" data-aos="fade-up" data-aos-duration="2900">
+                        <div class="project__single single__transform">
+                            <div class="project__img">
+                                <img src="assets/img/full-page/mobile_app/awrs.png"
+                                    alt="gym" loading="lazy">
+                            </div>
+                            <div class="project__content">
+                                <div class="project__heading">
+                                    <h3><a href="https://apps.apple.com/us/app/aw-recovery-services-charlie/id6446933727" target="_blank">AWRS</a></h3>
+                                </div>
+                                <div class="project__icon">
+                                    <a class="direction__btn direction__btn--2" href="https://apps.apple.com/us/app/aw-recovery-services-charlie/id6446933727" target="_blank"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                            <path d="M10.9902 23.0107L22.8908 11.1101" stroke="#0A0624"
+                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
