add target in html

--- a/team.html
+++ b/team.html
@@ -680,7 +680,7 @@
                                     trends and business management ideas.</p>
                             </div>
                             <div class="section__title__button">
-                                <a class="default__button" href="blog">VIEW ARCHIVE POST</a>
+                                <a class="default__button" href="blog" target="_blank">VIEW ARCHIVE POST</a>
                             </div>
 
                         </div>
@@ -695,7 +695,7 @@
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
-                                <h6><a href="what-is-mobile-application-development">What is Mobile APP Development?</a>
+                                <h6><a href="what-is-mobile-application-development" target="_blank">What is Mobile APP Development?</a>
                                 </h6>
                             </div>
                             <div class="blog__4__text">
@@ -703,7 +703,7 @@
                                 </p>
                             </div>
                             <div class="blog__4__button">
-                                <a class="default__button btn__black" href="what-is-mobile-application-development">READ
+                                <a class="default__button btn__black" href="what-is-mobile-application-development" target="_blank">READ
                                     MORE</a>
                             </div>
                         </div>
@@ -714,16 +714,16 @@
                                 <img src="assets/img/blog/Web-blog.webp" alt="image">
                             </div>
                             <div class="blog__4__time">
-                                <p><span class="text__gradient ">08 May, 2024</span></p>
+                                <p><span class="text__gradient">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
-                                <h6><a href="web-development-services">What is Web Development?</a></h6>
+                                <h6><a href="web-development-services" target="_blank">What is Web Development?</a></h6>
                             </div>
                             <div class="blog__4__text">
                                 <p>Web development is the process of creating and maintaining websites...</p>
                             </div>
                             <div class="blog__4__button">
-                                <a class="default__button btn__black" href="web-development-services">READ MORE</a>
+                                <a class="default__button btn__black" href="web-development-services" target="_blank">READ MORE</a>
                             </div>
                         </div>
                     </div>
